@@ -1,5 +1,4 @@
-SET(DERIVED_SOURCES_DIR "${CMAKE_BINARY_DIR}/DerivedSources")
-
-FILE(MAKE_DIRECTORY ${DERIVED_SOURCES_DIR})
+FILE(MAKE_DIRECTORY ${DERIVED_SOURCES_WEBCORE_DIR})
+FILE(MAKE_DIRECTORY ${DERIVED_SOURCES_JAVASCRIPTCORE_DIR})
 FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Source/JavaScriptCore/runtime)
 FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/Programs)
